# bento

./: .gitattributes  .glitterrc  .prettierignore  Cargo.toml  LICENSE  README.md  bento.excalidraw  build.rs  next.config.js  package.json  tsconfig.json
.github/: dependabot.yml
pages/: _app.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Terminal.tsx
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css  xterm.css
