[package]
name = "bento"
version = "0.1.0"
authors = ["Milo123459"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.26.0"
winit = "0.27.2"
takeable-option = "0.5.0"
image = "0.23.14"

[build-dependencies]
gl_generator = "0.14.0"