[package]
name = "bento"
version = "0.1.0"
description = "Bento"
authors = ["Milo123459", "Fnionn"]
license = ""
repository = ""
default-run = "bento"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "bento"
path = "src/main.rs"
